amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/introspection-field-interface.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/introspection-field-interface.api.graphql
Profile: GraphQL
Conforms: true
Number of results: 0
